<resources>
    <string name="app_name">LibraryApp</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="authors_info">Authors: %s</string>
    <string name="publish_date_info">Publish date: %s</string>
    <string name="publisher_info">Publisher: %s</string>
    <string name="categories_info">Categories: %s</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_bookshelf">Add to bookshelf</string>
    <string name="create_bookshelf_and_add">Create bookshelf and add book</string>
    <string name="create_bookshelf">Create bookshelf</string>
    <string name="bookshelf_title">Bookshelf title</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="select_bookshelf">Select bookshelf</string>
    <string name="book_preview">Book preview</string>
    <string name="books">Books</string>
    <string name="magazines">Magazines</string>
    <string name="compilation">Compilation</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
</resources>