<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/bottom_sheet_background"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"

    android:orientation="vertical">

    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/dark_grey" />

    <TextView
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/add_to_favourite_button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_favourite"
                android:id="@+id/icon_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_add_to_favourite"
                android:gravity="center_vertical"
                android:text="@string/add_to_favourite"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_to_bookshelf_button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_add"
                android:id="@+id/icon_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_add_to_bookshelf"
                android:gravity="center_vertical"
                android:text="@string/add_to_bookshelf"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_bookshelf_button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_create"
                android:id="@+id/icon_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_create_bookshelf"
                android:gravity="center_vertical"
                android:text="@string/create_bookshelf_and_add"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>