<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/black_half"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/white_half"
            android:background="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/white_half"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/black_half"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminateTint="@color/dark_red"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <EditText
            android:maxLines="1"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/ic_title"
            android:id="@+id/title_search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/title"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@id/author_search_field"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:maxLines="1"
            android:drawableStart="@drawable/ic_author"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_edit_text"
            android:id="@+id/author_search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/author"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/title_search_field" />


        <ImageButton
            android:id="@+id/search_button"
            android:background="@color/black"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:maxImageSize="48dp"
            app:fabCustomSize="60dp"
            app:srcCompat="@drawable/ic_search"
            android:layout_margin="10dp"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="36dp"
            app:layout_constraintTop_toTopOf="@id/title_search_field"
            app:layout_constraintBottom_toBottomOf="@id/author_search_field"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/author_search_field"
            android:contentDescription="@string/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/author_search_field"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
